--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -156,10 +156,8 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-    margin-right: auto;
-    margin-left: auto;
+    max-width: -webkit-calc(#{$content-width});
+    max-width:         calc(#{$content-width});
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
     @extend %clearfix;
